part1/exercise9/manifests/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: part1-exercise9-svc
spec:
  type: ClusterIP
  selector:
    app: part1-exercise9
  ports:
    - port: 2345
      protocol: TCP
      targetPort: 9902
