part1/exercise9/manifests/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: part1-exercise9-ingress
spec:
  rules:
    - http:
        paths:
        - path: /pingpong
          pathType: Prefix
          backend:
            service:
              name: part1-exercise9-svc # same name as in Service object
              port:
                number: 2345 # same port as in Service object
